Show correct icons

--- a/src/app/profile/components/about/about-directive-template.html
+++ b/src/app/profile/components/about/about-directive-template.html
@@ -18,6 +18,7 @@
           class="about-header"
           is-save-disabled="aboutEditForm.$invalid"
           show-btn-edit="true"
+          show-btn-drag="true"
           title="{{about.title}}"
           on-edit-click="about.onEdit()"
           on-cancel-click="about.onCancel()"
