--- a/src/app/profile/components/timeline/TimelineComponent-template.html
+++ b/src/app/profile/components/timeline/TimelineComponent-template.html
@@ -5,6 +5,7 @@
     <!-- Card content -->
     <div flex layout="column">
       <card-header
+        show-btn-drag="true"
         title="{{$ctrl.title}}">
       </card-header>
 
