E2e test for timeline

--- a/src/app/core/route/states/profile/profile-state.html
+++ b/src/app/core/route/states/profile/profile-state.html
@@ -6,5 +6,5 @@
     </div>
   </div>
   <profile-about username="{{profile.username}}"></profile-about>
-  <timeline username="{{profile.username}}"></timeline>
+  <timeline id="timeline" username="{{profile.username}}"></timeline>
 </div>
