--- a/src/app/profile/components/timeline/TimelineComponent-template.html
+++ b/src/app/profile/components/timeline/TimelineComponent-template.html
@@ -1,5 +1,8 @@
 <md-card>
-  <div class="content-container trans-height" layout="row">
+  <div class="loading-container" layout="row" layout-align="center center" ng-if="!$ctrl.isContentLoaded">
+    <md-progress-circular class="md-primary" md-diameter="60"></md-progress-circular>
+  </div>
+  <div class="content-container trans-height" layout="row" ng-if="$ctrl.isContentLoaded">
     <span flex="5"></span>
 
     <!-- Card content -->
