--- a/src/app/profile/components/timeline/TimelineComponent-template.html
+++ b/src/app/profile/components/timeline/TimelineComponent-template.html
@@ -8,6 +8,7 @@
     <!-- Card content -->
     <div flex layout="column">
       <card-header
+        buttons="$ctrl.actionButtons"
         show-btn-drag="true"
         title="{{$ctrl.title}}">
       </card-header>
