--- a/src/app/core/route/states/profile/profile-state.html
+++ b/src/app/core/route/states/profile/profile-state.html
@@ -6,5 +6,5 @@
     </div>
   </div>
   <profile-about username="{{profile.username}}"></profile-about>
-  <milestone-container username="{{profile.username}}"></milestone-container>
+  <milestone-container id="milestone-container" username="{{profile.username}}"></milestone-container>
 </div>
