--- a/src/app/profile/components/timeline/MilestoneContainer-template.html
+++ b/src/app/profile/components/timeline/MilestoneContainer-template.html
@@ -6,6 +6,7 @@
   <div class="content-container trans-height" layout="row">
     <span flex="5"></span>
     <div flex layout="column">
+      <button ng-click="$ctrl.createMode = !$ctrl.createMode">{{$ctrl.createMode && 'stop edit' || 'edit'}}</button>
       <card-header
         show-btn-drag="true"
         title="{{$ctrl.title}}">
@@ -17,7 +18,13 @@
         username="{{$ctrl.username}}"
         on-content-loaded="$ctrl.loaded(isLoaded)">
       </timeline>
-      <!--todo editorview-->
+      <milestone-create
+        id="milestone-create"
+        ng-if="$ctrl.createMode"
+        ng-show="$ctrl.isContentLoaded"
+        username="{{$ctrl.username}}"
+        on-content-loaded="$ctrl.loaded(isLoaded)">
+      </milestone-create>
     </div>
     <span flex="5"></span>
   </div>
