--- a/src/app/profile/components/timeline/milestone-styles.scss
+++ b/src/app/profile/components/timeline/milestone-styles.scss
@@ -1,4 +1,5 @@
 $lightOrange: #f9a858;
+$orange: #e98300;
 $lightGrey: rgba(0, 0, 0, 0.14);
 
 timeline {
@@ -100,3 +101,18 @@ milestone {
     }
   }
 }
+
+md-input-container {
+  margin-bottom: 0;
+}
+
+.datepicker-container {
+  .md-datepicker-button {
+    display: none !important;
+  }
+  .md-datepicker-input-container {
+    margin-left: 0 !important;
+    border-bottom: none;
+  }
+}
+
