style milestone create

--- a/src/app/profile/components/timeline/MilestoneCreate-template.html
+++ b/src/app/profile/components/timeline/MilestoneCreate-template.html
@@ -2,17 +2,22 @@
   <div layout="row">
     <md-input-container class="md-block flex-75">
       <label>Objective</label>
-      <input>
+      <input ng-model="$ctrl.milestone.objective">
     </md-input-container>
-    <md-input-container class="md-block datepicker-container flex-25">
-      <label>Start Date</label>
-      <md-datepicker ng-model=""></md-datepicker>
-    </md-input-container>
+    <div class="datepicker-container flex-25">
+      <!--<label>Due Date</label>-->
+      <md-datepicker ng-model="$ctrl.milestone.dueDate" md-placeholder="Due Date"></md-datepicker>
+    </div>
+  </div>
+  <div layout="column" ng-if="$ctrl.milestone.objective">
+    <h5>Description</h5>
+    <p ng-if="$ctrl.milestone.objective.description">{{$ctrl.milestone.objective.description}}</p>
+    <p ng-if="!$ctrl.milestone.objective.description">No description</p>
   </div>
   <div layout="row">
     <md-input-container class="md-block flex">
-      <label>Description</label>
-      <textarea  md-maxlength="150" rows="5" md-select-on-focus></textarea>
+      <label>More Information</label>
+      <textarea ng-model="$ctrl.milestone.moreInformation" md-select-on-focus></textarea>
     </md-input-container>
   </div>
 </div>
