--- a/src/app/profile/components/timeline/milestone-styles.scss
+++ b/src/app/profile/components/timeline/milestone-styles.scss
@@ -107,12 +107,24 @@ md-input-container {
 }
 
 .datepicker-container {
+  position: relative;
+  padding: 2px;
+  margin: 18px 0 0 0;
+  vertical-align: middle;
   .md-datepicker-button {
     display: none !important;
   }
   .md-datepicker-input-container {
     margin-left: 0 !important;
-    border-bottom: none;
+    width: 100%;
   }
+  .md-datepicker-input {
+    margin-bottom: 3px;
+  }
+}
+
+h5 {
+  color: $orange;
+  margin-bottom: 0.5em;
 }
 
