--- a/src/app/profile/components/timeline/milestone-styles.scss
+++ b/src/app/profile/components/timeline/milestone-styles.scss
@@ -121,6 +121,11 @@ md-input-container {
   .md-datepicker-input {
     margin-bottom: 3px;
   }
+  .validation-messages {
+    font-size: 12px;
+    color: #0B548F;
+    padding-top: 5px;
+  }
 }
 
 h5 {
