Add objectives search

--- a/src/app/core/route/states/profile/profile-state.html
+++ b/src/app/core/route/states/profile/profile-state.html
@@ -1,3 +1,4 @@
+<objectives-search></objectives-search>
 <div layout="column">
   <div>
     <div layout="row" flex="grow" layout-align="center center">
