--- a/src/app/app-component.scss
+++ b/src/app/app-component.scss
@@ -1,9 +1,5 @@
-#page-wrap {
-  margin: auto;
-  width: 960px;
-}
+#page-wrap {}
 
 section[ui-view] {
-  border: solid 1px black;
-  padding: 25px;
+  padding: 15px;
 }
