--- a/src/app/layout/toolbar/toolbar.html
+++ b/src/app/layout/toolbar/toolbar.html
@@ -1,20 +1,40 @@
-<md-toolbar class="md-medium-tall toolbar"> <!--md-whiteframe="1"-->
-  <div layout="row" flex="grow" layout-align="center center">
+<md-toolbar id="toolbar">
+  <div layout="row">
     <div class="logo"></div>
-    <div class="md-toolbar-tools">
-      <span flex="60" flex-gt-md="60">
+    <div id="welcome" layout="row" layout-align="start center">
+      <span>
         Welcome back, <strong>{{$ctrl.firstName}}</strong>!
       </span>
-      <div flex layout="row" layout-align="center center">
-        <md-button class="md-icon-button" ng-repeat="btn in $ctrl.buttons">
-          <!-- Alert must be placed after the icon -->
-          <md-icon md-svg-icon="{{btn.icon}}"></md-icon>
-          <div class="push">
-            <div>
-              <p><strong>25</strong></p>
+    </div>
+    <div layout="row" layout-align="end center" class="md-toolbar-tools">
+      <div layout="row">
+        <md-autocomplete
+          md-selected-item=""
+          md-search-text-change=""
+          md-search-text=""
+          md-selected-item-change=""
+          md-items=""
+          md-item-text=""
+          md-min-length="0"
+          placeholder="Zoek gebruiker">
+          <md-item-template>
+            <span md-highlight-text="" md-highlight-flags="^i">{{}}</span>
+          </md-item-template>
+          <md-not-found>
+            "{{}}" levert geen resultaten op.
+          </md-not-found>
+        </md-autocomplete>
+        <div>
+          <md-button class="md-icon-button" ng-repeat="btn in $ctrl.buttons">
+            <!-- Alert must be placed after the icon -->
+            <md-icon md-svg-icon="{{btn.icon}}"></md-icon>
+            <div class="push">
+              <div>
+                <p><strong>25</strong></p>
+              </div>
             </div>
-          </div>
-        </md-button>
+          </md-button>
+        </div>
       </div>
     </div>
   </div>
