--- a/src/app/profile/components/timeline/milestone-styles.scss
+++ b/src/app/profile/components/timeline/milestone-styles.scss
@@ -120,6 +120,8 @@ md-input-container {
   }
   .md-datepicker-input {
     margin-bottom: 3px;
+    pointer-events: none;
+    tab-index: -1;
   }
   .validation-messages {
     font-size: 12px;
