--- a/src/app/profile/components/about/about-directive-template.html
+++ b/src/app/profile/components/about/about-directive-template.html
@@ -3,6 +3,7 @@
     <div class="loading-container" layout="row" layout-align="center center" ng-if="!about.isContentLoaded">
       <md-progress-circular
         class="md-primary"
+        md-mode="indeterminate"
         md-diameter="60"></md-progress-circular>
     </div>
     <div class="content-container trans-height" layout="row" ng-if="about.isContentLoaded">
