edit of the timeline styles

--- a/src/app/profile/components/timeline/milestone-styles.scss
+++ b/src/app/profile/components/timeline/milestone-styles.scss
@@ -49,8 +49,14 @@ milestone {
       width: 3px;
       background-color: $lightOrange;
     }
+    md-card-title {
+      padding-top: 0;
+      padding-bottom: 0;
+    }
     .md-headline {
       font-size: 1.3em;
+      padding-bottom: 0.5em;
+      padding-top: 0.5em
     }
     .timeline-card {
       position: relative;
