--- a/src/app/profile/components/objectives-search/objectives-search-template.html
+++ b/src/app/profile/components/objectives-search/objectives-search-template.html
@@ -7,7 +7,7 @@
     md-search-text="$ctrl.searchText"
     md-items="obj in $ctrl.getObjectives()"
     md-menu-class="autocomplete-custom-template"
-    placeholder="Search objectives by title or tag">
+    md-floating-label="Objective">
     <md-item-template>
       <div class="item-title">
         <span class=item-title md-highlight-text="$ctrl.searchText">{{obj.title}}</span>
