--- a/src/app/profile/components/timeline/MilestoneCreate-template.html
+++ b/src/app/profile/components/timeline/MilestoneCreate-template.html
@@ -1,27 +1,22 @@
 <form name="milestoneCreateForm" novalidate>
   <div layout="column">
     <div layout="row">
-      <div class="md-block flex-75">
-        <!--<input-->
-        <!--required-->
-        <!--name="objective"-->
-        <!--ng-model="$ctrl.milestone.objective">-->
-        <!--<div ng-messages="milestoneCreateForm.objective.$error">-->
-        <!--<div ng-message="required">Objective is required.</div>-->
-        <!--</div>-->
-        <objectives-search on-selected="$ctrl.onObjectiveSelected(objective)"></objectives-search>
-      </div>
-      <div class="datepicker-container flex-25">
+      <objectives-search
+        on-selected="$ctrl.onObjectiveSelected(objective)"
+        flex="75"></objectives-search>
+      <div class="datepicker-container" flex>
         <!--<label>Due Date</label>-->
         <md-datepicker
           ng-model="$ctrl.milestone.dueDate"
           md-placeholder="Due Date"
           name="dueDate"
           md-min-date="$ctrl.minDate"
+          md-is-error="$ctrl.milestone.dueDate.$invalid"
           required></md-datepicker>
         <div class="validation-messages" ng-messages="milestoneCreateForm.dueDate.$error">
           <div ng-message="required">Due date is required.</div>
           <div ng-message="mindate">Due date is in past.</div>
+          <div ng-message="valid">Date is invalid.</div>
         </div>
       </div>
     </div>
