--- a/src/app/profile/components/timeline/MilestoneCreate-template.html
+++ b/src/app/profile/components/timeline/MilestoneCreate-template.html
@@ -2,9 +2,8 @@
   <div layout="column">
     <div layout="row">
       <objectives-search
-        on-selected="$ctrl.onObjectiveSelected(objective)"
-        flex="75"></objectives-search>
-      <div class="datepicker-container" flex>
+        on-selected="$ctrl.onObjectiveSelected(objective)" flex="50"></objectives-search>
+      <div class="datepicker-container">
         <!--<label>Due Date</label>-->
         <md-datepicker
           ng-model="$ctrl.milestone.dueDate"
