--- a/src/app/profile/components/timeline/milestone-styles.scss
+++ b/src/app/profile/components/timeline/milestone-styles.scss
@@ -108,40 +108,33 @@ milestone {
   }
 }
 
-md-input-container {
-  margin-bottom: 0;
-}
-
-.datepicker-container {
-  position: relative;
-  padding: 2px;
-  margin: 18px 0 0 0;
-  vertical-align: middle;
-  .md-datepicker-button {
-    display: none !important;
+milestone-create {
+  padding-bottom: 1em;
+  .datepicker-container {
+    position: relative;
+    padding-top: 2px;
+    margin: 18px 0 0 0;
+    vertical-align: middle;
+    .md-datepicker-button {
+      display: none !important;
+    }
+    .md-datepicker-input {
+      margin-bottom: 3px;
+    }
+    .validation-messages {
+      font-size: 12px;
+      margin-left: 12px;
+      color: #0B548F;
+      padding-top: 5px;
+    }
   }
-  .md-datepicker-input-container {
-    width: 100%;
+  md-input-container {
+    padding-bottom: 0 !important;
+    margin-bottom: 0;
   }
-  .md-datepicker-input {
-    margin-bottom: 3px;
-    pointer-events: none;
-    tab-index: -1;
-  }
-  .validation-messages {
-    font-size: 12px;
-    color: #0B548F;
-    padding-top: 5px;
+  h5 {
+    color: $orange;
+    margin-bottom: 0.5em;
+    margin-top: 0.5em;
   }
 }
-
-h5 {
-  color: $orange;
-  margin-bottom: 0.5em;
-  margin-top: 0.5em;
-}
-
-p {
-  margin-top: 0;
-}
-
