Add milestone error on post Add error styles Require formcontroller in objectivessearch Add objective null check in timelineservice

--- a/src/app/profile/components/timeline/MilestoneContainer-template.html
+++ b/src/app/profile/components/timeline/MilestoneContainer-template.html
@@ -7,6 +7,9 @@
         show-btn-drag="true"
         title="{{$ctrl.title}}">
       </card-header>
+      <div layout="row" ng-if="$ctrl.hasError" layout-align="center center">
+        <span class="error-milestone alert alert-danger md-subhead">Something went wrong...</span>
+      </div>
       <div class="loading-container" layout="row" layout-align="center center" ng-if="!$ctrl.isContentLoaded">
         <md-progress-circular class="md-primary" md-mode="indeterminate" md-diameter="60"></md-progress-circular>
       </div>
