Added label for datepicker

--- a/src/app/profile/components/timeline/MilestoneCreate-template.html
+++ b/src/app/profile/components/timeline/MilestoneCreate-template.html
@@ -4,7 +4,7 @@
       <objectives-search
         on-selected="$ctrl.onObjectiveSelected(objective)" flex="50"></objectives-search>
       <div class="datepicker-container">
-        <!--<label>Due Date</label>-->
+        <label>Due Date</label>
         <md-datepicker
           ng-model="$ctrl.milestone.dueDate"
           md-placeholder="Due Date"
