--- a/src/app/profile/components/objectives-search/objectives-search.scss
+++ b/src/app/profile/components/objectives-search/objectives-search.scss
@@ -9,10 +9,55 @@
   border-bottom-width: 0;
 }
 
-.autocomplete-custom-template .item-title,
+.autocomplete-custom-template .item-title {
+  .highlight {
+    color: orange;
+  }
+  display: block;
+  line-height: 2;
+}
+
 .autocomplete-custom-template .item-tag {
-  span::after{
+  .highlight {
+    color: orange;
+  }
+  span::after {
     content: ' ';
+  }
+  .tag {
+    background: #eee;
+    border-radius: 3px 0 0 3px;
+    color: #999;
+    display: inline-block;
+    height: 26px;
+    line-height: 26px;
+    padding: 0 20px 10px 23px;
+    position: relative;
+    margin: 0 10px 10px 0;
+    text-decoration: none;
+    -webkit-transition: color 0.2s;
+  }
+
+  .tag::before {
+    background: #fff;
+    border-radius: 10px;
+    box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
+    content: '';
+    height: 6px;
+    left: 10px;
+    position: absolute;
+    width: 6px;
+    top: 10px;
+  }
+
+  .tag::after {
+    border-bottom: 13px solid transparent;
+    border-left: 10px solid #eee;
+    border-top: 13px solid transparent;
+    content: '';
+    position: absolute;
+    right: 0;
+    top: 0;
   }
   display: block;
   line-height: 2;
