--- a/src/app/profile/components/timeline/MilestoneCreate-template.html
+++ b/src/app/profile/components/timeline/MilestoneCreate-template.html
@@ -6,11 +6,11 @@
       <div class="datepicker-container">
         <label>Due Date</label>
         <md-datepicker
-          ng-model="$ctrl.milestone.dueDate"
+          ng-model="$ctrl.dueDate"
           md-placeholder="Due Date"
           name="dueDate"
           md-min-date="$ctrl.minDate"
-          md-is-error="$ctrl.milestone.dueDate.$invalid"
+          md-is-error="$ctrl.dueDate.$invalid"
           required></md-datepicker>
         <div class="validation-messages" ng-messages="milestoneCreateForm.dueDate.$error">
           <div ng-message="required">Due date is required.</div>
