fix wrong objective

--- a/src/app/profile/components/timeline/MilestoneCreate-template.html
+++ b/src/app/profile/components/timeline/MilestoneCreate-template.html
@@ -3,7 +3,7 @@
     <div layout="row">
       <objectives-search flex on-selected="$ctrl.onObjectiveSelected(objective)"></objectives-search>
       <div class="datepicker-container">
-        <!--<label>Due Date</label>-->
+        <label>Due Date</label>
         <md-datepicker
           ng-model="$ctrl.dueDate"
           md-placeholder="Due Date"
